# cmc-terrain

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  README.md  build_web.sh
docs/: Task.md
old/: terrain.data  terrain.html  terrain.html.mem  terrain.js
src/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
src/GenVis/: DemoMidpoint.cpp  MidpointLine.cpp  MidpointLine.hpp
src/SdlObjects/: SdlGlContext.cpp  SdlGlContext.hpp  SdlWindow.hpp
src/Util/: Random.cpp  Random.hpp
web_tools/: Dockerfile  README.md  base.html
